# rust-cmake

./: .gitignore  CMakeLists.txt  Cargo.toml  build.rs
foo/: main.cpp
libfoo/: CMakeLists.txt  foo.c
libfoo++/: CMakeLists.txt  foo.cpp
src/: lib.rs  main.rs
